# mp-pytest

./: .gitignore  README.md  conftest.py  pyproject.toml
libs/components/: base_component.py
libs/fixtures/: pages.py
libs/pages/: __init__.py  base_page.py
libs/pages/infrastructures/: infrastructures.py
tests/ui/infrastructures/: test_infrastructures.py
